# LR8

Task_1/: CMakeLists.txt  CMakePresets.json  elasticsearch.cpp  filework.cpp  func.h  functions.cpp  ivalidation.cpp  main.cpp  struct.h  struct_funcs.cpp
Task_1/.cache/clangd/index/: func.h.C81F3997E590C6E1.idx  ivalidation.cpp.4E8F873026820E7E.idx  ivalidation.h.7F1B41CDBD6363B4.idx  main.cpp.E93FCD576187D4AA.idx  struct.h.84F23E13B2234B43.idx  struct_funcs.cpp.5DCE01FEC87E59FA.idx
Task_1/резерв/: elasticsearch.cpp  ivalidation.cpp  struct_funcs.cpp
Task_2/: CMakeLists.txt  elasticsearch.cpp  filework.cpp  func.h  functions.cpp  ivalidation.cpp  main.cpp  struct.h  struct_funcs.cpp
Task_2/.cache/clangd/index/: elasticsearch.cpp.D4A271010183D0D0.idx  filework.cpp.9C8BF2A87D34113D.idx  func.h.EC0AE1788BFA8C6C.idx  functions.cpp.E4844AC558121314.idx  ivalidation.cpp.9F0A576E3B7C84A2.idx  main.cpp.CCDD546BD0E2F3E3.idx  solution.cpp.FC721C7DA41C4C1D.idx  struct.h.73F75F41C1A9820F.idx  struct_funcs.cpp.399B559847B9DE59.idx
Task_2/резерв/: elasticsearch.cpp
